--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -8,8 +8,7 @@ branches:
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
     tracks-release-branches: false
-    is-release-branch: true
-    pre-release-weight: 1000
+    is-release-branch: false
 ignore:
   sha: []
 merge-message-formats: {}
