Update for Nuget

--- a/Projects/EventHorizon.Package.Test/EventHorizon.Package.Test.csproj
+++ b/Projects/EventHorizon.Package.Test/EventHorizon.Package.Test.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net5.0</TargetFramework>
 
         <AssemblyTitle>EventHorizon Package Test</AssemblyTitle>
-        <Description>Send emails very easily. Use razor templates, smtp, embedded files, all without hassle. This is a Base Package and includes just the domain model, very basic defaults, and is also included with every other Fluent Email package here.</Description>
+        <Description>Update description, this is just a test!</Description>
         <AssemblyName>EventHorizon.Package.Test</AssemblyName>
         <Authors>Cody Merritt Anhorn</Authors>
         <PackageId>EventHorizon.Package.Test</PackageId>
