Updated GitVersion configuration for PR's. Disabled dotnet pack/push, to be added later after NuGetVersion version details are validated.

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -9,8 +9,8 @@ branches:
     track-merge-target: false
     tracks-release-branches: false
     is-release-branch: false
-  feature:
-    regex: ^features?[/-]
+  pull_request:
+    regex: ^pull_request?[/-]
     source-branches: ['main', 'develop', 'feature', 'hotfix', 'support']
     tag: 'alpha'
     increment: Inherit
