--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -21,15 +21,15 @@ jobs:
       uses: gittools/actions/gitversion/execute@v0.9
     - run: |
         echo "NuGetVersionV2: ${{ steps.gitversion.outputs.NuGetVersionV2 }}"
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '5.0.100-preview.7.20366.6'
-    - name: Build with dotnet
-      run: dotnet build --configuration Release ./Projects/EventHorizon.Package.Test/EventHorizon.Package.Test.csproj
-    - name: Test with dotnet
-      run: dotnet test --no-restore --verbosity normal ./Projects/EventHorizon.Package.Test.Tests/EventHorizon.Package.Test.Tests.csproj
-    - name: Pack with dotnet
-      run: dotnet pack Projects/EventHorizon.Package.Test/EventHorizon.Package.Test.csproj --output nuget-packages --configuration Release -p:PackageVersion=${{ steps.gitversion.outputs.NuGetVersionV2 }}
-    - name: Push with dotnet
-      run: dotnet nuget push nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    # - name: Setup .NET Core
+    #   uses: actions/setup-dotnet@v1
+    #   with:
+    #     dotnet-version: '5.0.100-preview.7.20366.6'
+    # - name: Build with dotnet
+    #   run: dotnet build --configuration Release ./Projects/EventHorizon.Package.Test/EventHorizon.Package.Test.csproj
+    # - name: Test with dotnet
+    #   run: dotnet test --no-restore --verbosity normal ./Projects/EventHorizon.Package.Test.Tests/EventHorizon.Package.Test.Tests.csproj
+    # - name: Pack with dotnet
+    #   run: dotnet pack Projects/EventHorizon.Package.Test/EventHorizon.Package.Test.csproj --output nuget-packages --configuration Release -p:PackageVersion=${{ steps.gitversion.outputs.NuGetVersionV2 }}
+    # - name: Push with dotnet
+    #   run: dotnet nuget push nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
