--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -9,12 +9,13 @@ branches:
     track-merge-target: false
     tracks-release-branches: false
     is-release-branch: false
-  pull_request:
-    regex: ^pull_request?[/-]
+  pull-request:
+    regex: ^(pull|pull\-requests|pr)[/-]
     source-branches: ['main', 'develop', 'feature', 'hotfix', 'support']
-    tag: 'alpha'
+    tag: alpha
     increment: Inherit
     prevent-increment-of-merged-branch-version: false
+    tag-number-pattern: '[/-](?<number>\d+)[-/]'
     track-merge-target: false
     tracks-release-branches: false
     is-release-branch: false
