--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -9,6 +9,15 @@ branches:
     track-merge-target: false
     tracks-release-branches: false
     is-release-branch: false
+  feature:
+    regex: ^features?[/-]
+    source-branches: ['main', 'develop', 'feature', 'hotfix', 'support']
+    tag: 'alpha'
+    increment: Inherit
+    prevent-increment-of-merged-branch-version: false
+    track-merge-target: false
+    tracks-release-branches: false
+    is-release-branch: false
   pull-request:
     regex: ^(pull|pull\-requests|pr)[/-]
     source-branches: ['main', 'develop', 'feature', 'hotfix', 'support']
