Update to workflow GitVersion versionSpec.

--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -2,7 +2,7 @@ name: EventHorizon Nuget Packages
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, closed]
+    types: [opened, synchronize]
     branches: [ main ]
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9
       with:
-        versionSpec: '5.1.x'
+        versionSpec: '5.3.x'
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v0.9
