Push to main should trigger dotnet-package

--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -1,6 +1,8 @@
 name: EventHorizon Nuget Packages
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
     types: [opened, synchronize]
     branches: [ main ]
