--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -8,6 +8,15 @@ branches:
     track-merge-target: false
     tracks-release-branches: false
     is-release-branch: true
+  release:
+    regex: ^releases?[/-]
+    tag: beta
+    increment: Patch
+    prevent-increment-of-merged-branch-version: true
+    track-merge-target: false
+    tracks-release-branches: false
+    is-release-branch: true
+    pre-release-weight: 1000
   feature:
     regex: ^features?[/-]
     tag: 'alpha'
