Using additionalArguments instead.

--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -22,8 +22,7 @@ jobs:
       id: gitversion # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v0.9.4
       with:
-        updateAssemblyInfo: true
-        updateAssemblyInfoFilename: ./Projects/EventHorizon.Package.Test/Properties/AssemblyInfo.cs
+        additionalArguments: '/updateAssemblyInfo'
     - run: |
         echo "NuGetVersionV2: ${{ steps.gitversion.outputs.NuGetVersionV2 }}"
     - name: Setup .NET Core
