--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -11,7 +11,7 @@ branches:
   release:
     regex: ^releases?[/-]
     tag: beta
-    increment: Patch
+    increment: Minor
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
     tracks-release-branches: false
