--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     types: [opened, synchronize]
-    branches: [ main ]
+    branches: [ main, 'releases/**' ]
 
 jobs:
   build:
